Some more changes for IPC list, including linking to IPC list from elsewhere

--- a/call/index.html
+++ b/call/index.html
@@ -10,6 +10,9 @@ The 13th IEEE Symposium on Visualization for Cyber Security (VizSec) is a forum 
 <p>
 The purpose of VizSec is to explore effective and scalable visual interfaces for security domains such as network security, computer forensics, reverse engineering, insider threat detection, cryptography, privacy, user assisted attacks prevention, compliance management, wireless security, secure coding, and penetration testing.
 </p>
+<p>
+See our <a href="/about#ipc">program committee</a>.
+</p>
 
 <h4>Technical Papers</h4>
 <p>
