Updated the publicity links to remove duds

--- a/publicity/index.html
+++ b/publicity/index.html
@@ -11,25 +11,22 @@ layout: default
 <h3>Mailing Lists</h3>
 <ul>
 	<li>
-		<a href="http://lists.vizsec.org/mailman/listinfo/info_lists.vizsec.org">VizSEC</a> - info@lists.vizsec.org
+		<a href="https://groups.google.com/forum/#!forum/vizsec">VizSec Group</a> 
 	</li>
 	<li>
-		<a href="http://www.infovis.org/mailman/listinfo/infovis">Infovis</a> - infovis@infovis.org
+		<a href="http://www.infovis.org/mailman/listinfo/infovis">Infovis</a> - <a href="mailto:infovis@infovis.org">infovis@infovis.org</a>
 	</li>
 	<li>
-		FloCommunity mailing list - flocommunity@cert.org
-	</li>
-	<li>
-		<a href="https://dlist.server.uni-frankfurt.de/mailman/listinfo/ifip-tc11">IFIP TC 11</a> - ifip-tc11@dlist.uni-frankfurt.de
+		<a href="https://dlist.server.uni-frankfurt.de/mailman/listinfo/ifip-tc11">IFIP TC 11</a> - <a href="mailto:ifip-tc11@dlist.uni-frankfurt.de">ifip-tc11@dlist.uni-frankfurt.de</a>
 	</li>
 	<li>
 		<a href="http://research.cs.wisc.edu/dbworld/">DBWorld</a>
 	</li>
 	<li>
-		<a href="https://lists.cs.columbia.edu/mailman/listinfo/tccc">IEEE ComSoc Technical Committee on Computer Communications</a>
+		FloCommunity mailing list - <a href="mailto:flocommunity@cert.org">flocommunity@cert.org</a>
 	</li>
 	<li>
-		Spafford's list: ias-opportunities@cerias.purdue.edu
+		Spafford's list: <a href="mailto:ias-opportunities@cerias.purdue.edu">ias-opportunities@cerias.purdue.edu</a>
 	</li>
 </ul>
 
@@ -37,35 +34,26 @@ layout: default
 
 <ul>
 	<li>
-		<a href="http://securityconferences.net/">Computer Security Conferences</a>
-	</li>
-	<li>
 		<a href="http://wikicfp.com/cfp/">WikiCFP</a>
 	</li>
 	<li>
-		<a href="http://confcal.vrvis.at/">VRVis</a> (email step@vrvis.at)
+		<a href="http://confcal.vrvis.at/">VRVis</a> (email <a href="mailto:step@vrvis.at">step@vrvis.at</a>)
 	</li>
 	<li>
-		<a href="http://www.infovis-wiki.net/">Infovis-Wiki</a> (wiki)
+		<a href="http://www.infovis-wiki.net/">Infovis-Wiki</a>
 	</li>
 	<li>
-		<a href="http://secviz.org/">SecViz.org</a> (form)
+		<a href="http://secviz.org/">SecViz.org</a>
 	</li>
 	<li>
-		<a href="http://graphicsconferences.wikidot.com/upcoming-conferences/">Computer Graphics Conferences Wiki</a> (email beovar at gmail.com to add conference)
+		<a href="http://www.acm.org/conferences">ACM</a>
 	</li>
 	<li>
-			<a href="http://www.acm.org/conferences">ACM</a> (form)
+		<a href="http://www.ieee-security.org/Calendar/submitting.html">IEEE Cypher</a> (email <a href="mailto:cipher-cfp@ieee-security.org">cipher-cfp@ieee-security.org</a>)</li>
+	<li>
+		<a href="http://www.usenix.org/events/links_to_other.html">Usenix</a> (email <a href="mailto:other_events@usenix.org">other_events@usenix.org</a>)
 	</li>
 	<li>
-		<a href="http://www.computer.org/conferences/calendar.htm">IEEE</a> (email calendar@computer.org)
-	</li>
-	<li>
-		<a href="http://www.ieee-security.org/Calendar/submitting.html">IEEE Cypher</a> (email cipher-cfp@ieee-security.org)</li>
-	<li>
-		<a href="http://www.usenix.org/events/links_to_other.html">Usenix</a> (email other_events@usenix.org)
-	</li>
-	<li>
-		<a href="http://www.iacr.org/events/submit.html">International Association for Cryptologic Research Calendar</a> (form)
+		<a href="http://www.iacr.org/events/submit.html">International Association for Cryptologic Research Calendar</a> 
 	</li>
 </ul>
